<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/small_padding"
            android:text="@string/phoneNum"
            android:textColor="@color/black"
            android:textSize="@dimen/large_font" />

        <EditText
            android:id="@id/loginName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hintPhoneNum"
            android:textSize="@dimen/max_font" />

    </LinearLayout>

    <View style="@style/divider_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/small_padding"
            android:text="@string/captcha"
            android:textColor="@color/black"
            android:textSize="@dimen/large_font" />

        <EditText
            android:id="@id/note_securityCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hintCaptcha"
            android:textSize="@dimen/max_font" />


        <View style="@style/divider_vertical" />

        <TextView
            android:id="@id/getCaptcha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/mini_padding"
            android:text="@string/getCaptcha"
            android:textColor="@color/orange" />

    </LinearLayout>

    <View style="@style/divider_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <View style="@style/divider_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/small_padding"
            android:text="@string/newPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/large_font" />

        <EditText
            android:id="@id/newPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hintPassword"
            android:textSize="@dimen/max_font" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@id/finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:background="@drawable/btn_shape"
            android:text="@string/accomplish"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>