<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <!--TOOLBAR-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />


    <View style="@style/divider_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/small_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginName"
            android:textColor="@color/black"
            android:textSize="@dimen/large_font" />

        <EditText
            android:id="@id/loginName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/min_padding"
            android:layout_marginTop="@dimen/min_padding"
            android:background="@null"
            android:hint="@string/hintLoginName"
            android:maxLength="20"
            android:textColor="@color/grey"
            android:textSize="@dimen/max_font" />
    </LinearLayout>

    <View style="@style/divider_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/small_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密码："
            android:textColor="@color/black"
            android:textSize="@dimen/large_font" />

        <EditText
            android:id="@id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/min_padding"
            android:layout_marginTop="@dimen/min_padding"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/grey"
            android:textSize="@dimen/max_font" />
    </LinearLayout>


    <View style="@style/divider_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <Button
            android:id="@id/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:background="@drawable/btn_shape"
            android:text="@string/login"
            android:textColor="@color/white"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quick_register"
            android:textColor="@color/orange"
            android:textSize="@dimen/large_font" />

        <TextView
            android:id="@id/findPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/findPassword"
            android:textColor="@color/orange"
            android:textSize="@dimen/large_font" />
    </LinearLayout>


</LinearLayout>