<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:id="@id/tab_root">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@id/tab_main">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="2dp"
            android:src="@drawable/main_unselect"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@id/tab_sale">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="2dp"
            android:src="@drawable/sale_unselect"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@id/tab_find">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="2dp"
            android:src="@drawable/find_unselect"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@id/tab_mine">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="2dp"
            android:src="@drawable/my_unselect"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine"/>

    </LinearLayout>

</LinearLayout>