<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <com.lihai.widget.MySearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_color"
        android:padding="@dimen/small_padding"
        app:canInput="true"
        app:hint="@string/search_merchant" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_padding"
                android:paddingBottom="@dimen/mini_padding"
                android:paddingTop="@dimen/mini_padding">

            </LinearLayout>

            <View style="@style/divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/small_padding"
                android:paddingTop="@dimen/small_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/mini_padding"
                    android:text="@string/hot_search"
                    android:textColor="@color/grey_dark"
                    android:textSize="@dimen/large_font" />

                <View style="@style/divider_horizontal" />

                <com.lihai.myo2o.utils.MyFlowLayout
                    android:id="@+id/flow_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/mini_padding" />

            </LinearLayout>

            <View style="@style/divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_padding"
                android:paddingBottom="@dimen/mini_padding"
                android:paddingTop="@dimen/mini_padding">

            </LinearLayout>

            <View style="@style/divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/small_padding"
                android:paddingTop="@dimen/small_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/mini_padding"
                    android:text="@string/search_history"
                    android:textColor="@color/grey_dark"
                    android:textSize="@dimen/large_font" />

                <View style="@style/divider_horizontal" />

                <ListView
                    android:id="@id/search_page_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></ListView>

                <View style="@style/divider_horizontal" />

                <TextView
                    android:id="@id/clean_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/small_padding"
                    android:text="@string/clean_history_record"
                    android:textColor="@color/grey_dark"
                    android:textSize="@dimen/large_font" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>